--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>Calculator</title>
+        <link rel="icon" type="ico" href="i.ico" />
 	</head>
 	<body>
 		<div id="calculator">
