--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>Calculator</title>
         <link rel="icon" type="ico" href="i.ico" />
+        <link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
 		<div id="calculator">
