--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 		<title>Calculator</title>
         <link rel="icon" type="ico" href="i.ico" />
         <link rel="stylesheet" href="style.css" />
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
+        <script src="script.js"/></script>
 	</head>
 	<body>
 		<div id="calculator">
@@ -14,7 +16,7 @@
 				<a>-</a>
 				<a>/</a>
 				<a>*</a>
-				<a>=</a>
+				<a id="equals">=</a>
 			</div>
 			<div id="numbers">
 				<a>1</a>
