Add radix button.

--- a/index.html
+++ b/index.html
@@ -11,12 +11,11 @@
 		<div id="calculator">
 			<div id="total">
 			</div>
-			<div id="operators">
-				<a>+</a>
-				<a>-</a>
-				<a>/</a>
-				<a>*</a>
-				<a id="equals">=</a>
+			<div id="radix">
+				<a id="10">DEC</a>
+				<a id="16">HEX</a>
+				<a id="8">OCT</a>
+				<a id="2">BIN</a>
 			</div>
 			<div id="numbers">
 				<a>1</a>
@@ -31,6 +30,13 @@
 				<a id="clear">C</a>
 				<a>0</a>
 				<a id="clearall">AC</a>
+			</div>
+            <div id="operators">
+                <a>+</a>
+				<a>-</a>
+				<a>/</a>
+				<a>*</a>
+				<a id="equals">=</a>
 			</div>
 		</div>
 	</body>
