Add .gitingore and new buttons, beautify everything.

--- a/index.html
+++ b/index.html
@@ -7,37 +7,63 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
         <script src="script.js"/></script>
 	</head>
-	<body>
-		<div id="calculator">
-			<div id="total">
-			</div>
-			<div id="radix">
-				<a id="10">DEC</a>
-				<a id="16">HEX</a>
-				<a id="8">OCT</a>
-				<a id="2">BIN</a>
-			</div>
-			<div id="numbers">
-				<a>1</a>
-				<a>2</a>
-				<a>3</a>
-				<a>4</a>
-				<a>5</a>
-				<a>6</a>
-				<a>7</a>
-				<a>8</a>
-				<a>9</a>
-				<a id="clear">C</a>
-				<a>0</a>
-				<a id="clearall">AC</a>
-			</div>
+    <body>
+        <div id="calculator">
+            <div id="total">
+            </div>
+            <div id="rad">
+                <div class="">HEX</div>
+                <div>DEC</div>
+                <div>OCT</div>
+                <div>BIN</div>
+            </div>
+            <div id="HEX"></div>
+            <div id="DEC"></div>
+            <div id="OCT"></div>
+            <div id="BIN"></div>
+            <div id="topbutton">
+                <div>
+                    <a>A</a>
+                    <a>B</a>
+                    <a>C</a>
+                    <a>D</a>
+                    <a>E</a>
+                    <a>F</a>
+                </div>
+                <div id="mod">
+                    <a>Mod</a>
+                </div>
+                <div id="plusminus">
+                    <a>&plusmn;</a>
+                </div>
+                <div id="larr">
+                    <a>&larr;</a>
+                </div>
+                <div id="CE">
+                    <a>CE</a>
+                </div>
+            </div>
+            <div id="numbers">
+                <a>1</a>
+                <a>2</a>
+                <a>3</a>
+                <a>4</a>
+                <a>5</a>
+                <a>6</a>
+                <a>7</a>
+                <a>8</a>
+                <a>9</a>
+                <a id="clear">C</a>
+                <a>0</a>
+                <a id="clearall">AC</a>
+            </div>
             <div id="operators">
                 <a>+</a>
-				<a>-</a>
-				<a>/</a>
-				<a>*</a>
-				<a id="equals">=</a>
-			</div>
-		</div>
-	</body>
+                <a>-</a>
+                <a>/</a>
+                <a>*</a>
+                <a id="equals">=</a>
+            </div>
+        </div>
+    </body>
 </html>
