--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	</head>
     <body>
         <div id="calculator">
+            <div id="header">calculator</div>
             <div id="total">
             </div>
             <div id="rad">
