Redesign JS to meet requirement of hw.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div id="OCT"></div>
             <div id="BIN"></div>
             <div id="topbutton">
-                <div>
+                <div id="alphabet">
                     <a>A</a>
                     <a>B</a>
                     <a>C</a>
@@ -34,14 +34,14 @@
                 <div id="mod">
                     <a>Mod</a>
                 </div>
-                <div id="plusminus">
+                <div id="sign">
                     <a>&plusmn;</a>
                 </div>
                 <div id="larr">
                     <a>&larr;</a>
                 </div>
-                <div id="CE">
-                    <a>CE</a>
+                <div id="0b">
+                    <a>0b</a>
                 </div>
             </div>
             <div id="numbers">
@@ -56,7 +56,7 @@
                 <a>9</a>
                 <a id="clear">C</a>
                 <a>0</a>
-                <a id="clearall">AC</a>
+                <a id="clearentry">CE</a>
             </div>
             <div id="operators">
                 <a>+</a>
@@ -65,6 +65,8 @@
                 <a>*</a>
                 <a id="equals">=</a>
             </div>
+        </div>
+        <div id="debug">
         </div>
     </body>
 </html>
